syntax = "proto3";

option go_package = "genproto/center";

package center;

service CenterService{
    rpc CreateCenter(Center) returns(CenterResp){}
    rpc GetCenterById(CenterId) returns(CenterResp){}
    rpc UpdateCenter(CenterResp) returns(UpdateResp){}
    rpc DeleteCenter(CenterId) returns(Status){}
}

message Center{
    string name = 1;
    string description = 2;
    string address = 3;
    string phone = 4;
}

message CenterResp{
    string id = 1;
    string name = 2;
    string description = 3;
    string address = 4;
    string phone = 5;
}

message CenterId{
    string id = 1;
}

message UpdateResp{
    string id = 1;
    string name = 2;
    string description = 3;
    string address = 4;
    string phone = 5;
}

message Status{
    bool status = 1;
    string message = 2;
}